<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/fragment_main_btn_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_btn_old" />

    <Button
        android:id="@+id/fragment_main_btn_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_btn_new" />

    <TextView
        android:id="@+id/fragment_info_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_tv_default" />

</LinearLayout>