<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".old.OldFragment"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_select_chuck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/fragment_chuck1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_chuck_first" />

        <Button
            android:id="@+id/fragment_chuck2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_chuck_second" />

        <Button
            android:id="@+id/fragment_chuck3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fragment_chuck_third" />
    </LinearLayout>

    <ImageView
        android:id="@+id/fragment_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@tools:sample/avatars" />
</LinearLayout>